add a new HTTP content source that is an extension to the Url content source - it supports HTTP user/pass authentication as well as HTTP proxy and proxy authentication